Time: 30 ms (87.75%) | Memory: 59.4 MB (35.24%) - LeetSync